libs/parser/testdata/errors/at_invalid_alias.csl
# Test rejection of invalid alias names
case1: @123alias:path
case2: @-invalid:path
